2007-10-25  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/PrintStatus.cs: print which items
	have been internalized if the parameter `display_internalized`
	is set to true.

	* Makefile: define parameter `display_internalized` and set it
	to false. Set it explicitely to true if you want a detailed log
	about which metadata items have been internalized.

2007-10-25  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/TunerAnnotations.cs
	* Mono.Tuner/AdjustVisibility.cs:
		Annotate the items that have been internalized
		for later use.

	* Makefile: always rebuild Mono.Tuner.dll for now.

2007-09-04  Jb Evain  <jbevain@novell.com>

	* masterinfos/*.info added, so we don't have to download them.
	* Makefile: use directly the .info files from the repo.

2007-08-28  Jb Evain  <jbevain@novell.com>

	* Makefile: mdb support.

2007-08-21  Jb Evain  <jbevain@novell.com>

	* Makefile: tune on `all`, and only re-installed the tuned
	assemblies on `install`.

2007-08-16  Jb Evain  <jbevain@novell.com>

	* Makefile: re-install in the GAC the tuned assemblies.

2007-08-13  Jb Evain  <jbevain@novell.com>

	* Makefile: tune on net_2_1 install.

2007-08-11  Jb Evain  <jbevain@novell.com>

	* Descriptors/System.xml, Makefile: add a descriptor
	to protect some classes in System.

2007-08-05  Jb Evain  <jbevain@novell.com>

	* Descriptors/smcs.xml, Makefile: add a descriptor
	to protect some classes in smcs.

2007-08-03  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : a bit win32 friendly fix.

2007-08-01  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/CheckVisibilit.cs:
		New debugging step to ensure that the even after
		API tuning the visibility is correct.

2007-07-27  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/RemoveSerialization.cs:
		Add a new linker step to remove automatically everything
		serialization related.

2007-07-18  Jb Evain  <jbevain@novell.com>

	* tuner: new tool to tune the Mono assemblies from a full 2.1